package model.dungeon.entity.behavior.move;

import engine.Cmd;
import model.dungeon.Maze;
import model.dungeon.entity.Entity;

public class MoveHero implements Move {
    @Override
    public Cmd move(Maze maze, Entity entity) {
        return null;
    }
}
